--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+alert("This game was created by ricktu288, I did it in class and I forked it because it was cool. Full credit to him")
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
